--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@ body {
     font-family: 'Lato', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    color: #374151;
 }
 
 code {
