--- a/src/index.css
+++ b/src/index.css
@@ -24,8 +24,13 @@ code {
     --ag-odd-row-background-color: #f9fafb !important;
     --ag-control-panel-background-color: #f9fafb !important;
     --ag-chip-background-color: #e5e7eb !important;
+    --ag-foreground-color: #6B7280 !important;
 }
 
 .ag-root-wrapper {
     border-radius: 8px !important;
+}
+
+.ag-header-cell-text {
+    color: #374151 !important;
 }
