--- a/src/index.css
+++ b/src/index.css
@@ -68,6 +68,10 @@ code {
     background-color: white;
 }
 
+.editor .ruleGroup-addRule, .editor .ruleGroup-addGroup {
+    opacity: 0;
+}
+
 .rule-operators {
     width: 60px;
 }
