--- a/src/index.css
+++ b/src/index.css
@@ -84,6 +84,12 @@ code {
     gap: 8px;
 }
 
+.pretty input[type="checkbox"] {
+    margin-top: 2px;
+    border-radius: 2px !important;
+    /*color: #6b7280 !important;*/
+}
+
 .ag-paging-page-size {
     display: none;
 }
