--- a/src/index.css
+++ b/src/index.css
@@ -90,6 +90,14 @@ code {
     /*color: #6b7280 !important;*/
 }
 
+input:focus,
+select:focus,
+textarea:focus,
+button:focus {
+    outline: none !important;
+    --tw-ring-color: transparent !important;
+}
+
 .ag-paging-page-size {
     display: none;
 }
