--- a/src/index.css
+++ b/src/index.css
@@ -47,9 +47,8 @@ code {
     --ag-control-panel-background-color: #222628;
     --ag-subheader-background-color: #000;
     --ag-input-disabled-background-color: #282c2f;
-    --ag-input-focus-box-shadow:
-            0 0 2px 0.5px rgba(255, 255, 255, 0.5),
-            0 0 4px 3px var(--ag-input-focus-border-color);
+    --ag-input-focus-box-shadow: 0 0 2px 0.5px rgba(255, 255, 255, 0.5),
+        0 0 4px 3px var(--ag-input-focus-border-color);
     --ag-card-shadow: 0 1px 20px 1px black;
     --ag-disabled-foreground-color: rgba(255, 255, 255, 0.5);
     --ag-chip-background-color: rgba(255, 255, 255, 0.07);
