--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,24 @@
         -ms-overflow-style: none; /* IE and Edge */
         scrollbar-width: none; /* Firefox */
     }
+    .scrollbar::-webkit-scrollbar {
+    width: 10px;
+    height: 2px;
+  }
+   .scrollbar::-webkit-scrollbar-track {
+    border-radius: 100vh;
+    background: #f7f4ed;
+  }
+
+  .scrollbar::-webkit-scrollbar-thumb {
+    background: #e0cbcb;
+    border-radius: 100vh;
+    border: 3px solid #f6f7ed;
+  }
+
+  .scrollbar::-webkit-scrollbar-thumb:hover {
+    background: #c0a0b9;
+  }
 }
 
 body {
@@ -151,10 +169,11 @@ button:focus {
 }
 ::-webkit-scrollbar {
     -webkit-appearance: none;
-    width: 8px;
-    height: 8px;
+    width: 2px;
+    height: 2px;
 }
 ::-webkit-scrollbar-thumb {
+
     border-radius: 4px;
     background-color: rgba(0, 0, 0, 0.5);
     box-shadow: 0 0 1px rgba(255, 255, 255, 0.5);
