--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import '~react-complex-tree/lib/style-modern.css';
 
 @layer utilities {
     /* Hide scrollbar for Chrome, Safari and Opera */
