--- a/src/components/Cards/ConnectorCard/style.css
+++ b/src/components/Cards/ConnectorCard/style.css
@@ -128,10 +128,13 @@ font-weight: 400;
     .coming-soon{
         position: absolute;
         top: -10px;
-        right: 10px;
+        border-radius: 24px;
+        right: 4px;
+        padding: 4px;
+           border: 1px solid #aaaab7;
         background: #fcfcfd;
         color: #919192;
-        font-size: 12px;
+        font-size: 8px;
         font-weight: 300;
     }
     .add-btn{
