--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 @import '~react-complex-tree/lib/style-modern.css';
+@import "@cloudscape-design/global-styles/index.css";
 
 @layer utilities {
     /* Hide scrollbar for Chrome, Safari and Opera */
