feat: migrate to cloud space

--- a/src/index.css
+++ b/src/index.css
@@ -180,3 +180,10 @@ button:focus {
     background-color: rgba(0, 0, 0, 0.5);
     box-shadow: 0 0 1px rgba(255, 255, 255, 0.5);
 }
+
+table{
+    border-collapse: separate!important;
+}
+.awsui-context-content-header{
+    border-radius: 12px!important;
+}
